out
test.cpp: In function ‘void solve()’:
test.cpp:249:10: warning: variable ‘push’ set but not used [-Wunused-but-set-variable]
  249 |     auto push=[&](ll v, D t) {
      |          ^~~~
In file included from /usr/include/c++/12/ext/alloc_traits.h:34,
                 from /usr/include/c++/12/bits/basic_string.h:39,
                 from /usr/include/c++/12/string:53,
                 from /usr/include/c++/12/bits/locale_classes.h:40,
                 from /usr/include/c++/12/bits/ios_base.h:41,
                 from /usr/include/c++/12/ios:42,
                 from /usr/include/c++/12/istream:38,
                 from /usr/include/c++/12/sstream:38,
                 from /usr/include/c++/12/complex:45,
                 from /usr/include/c++/12/ccomplex:39,
                 from stdc++.h:54:
/usr/include/c++/12/bits/alloc_traits.h: In instantiation of ‘static constexpr void std::allocator_traits<std::allocator<_CharT> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = D; _Args = {D&, long long int&}; _Tp = D; allocator_type = std::allocator<D>]’:
/usr/include/c++/12/bits/vector.tcc:117:30:   required from ‘constexpr std::__cxx1998::vector<_Tp, _Alloc>::reference std::__cxx1998::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {D&, long long int&}; _Tp = D; _Alloc = std::allocator<D>; reference = D&]’
/usr/include/c++/12/debug/vector:519:23:   required from ‘std::__debug::vector<_Tp, _Allocator>::reference std::__debug::vector<_Tp, _Allocator>::emplace_back(_Args&& ...) [with _Args = {D&, long long int&}; _Tp = D; _Allocator = std::allocator<D>; reference = D&]’
/usr/include/c++/12/bits/stl_queue.h:756:18:   required from ‘void std::priority_queue<_Tp, _Sequence, _Compare>::emplace(_Args&& ...) [with _Args = {D&, long long int&}; _Tp = D; _Sequence = std::__debug::vector<D>; _Compare = std::greater<D>]’
test.cpp:252:20:   required from here
/usr/include/c++/12/bits/alloc_traits.h:518:28: error: no matching function for call to ‘construct_at(D*&, D&, long long int&)’
  518 |           std::construct_at(__p, std::forward<_Args>(__args)...);
      |           ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/12/bits/stl_iterator.h:85,
                 from /usr/include/c++/12/bits/stl_algobase.h:67,
                 from /usr/include/c++/12/bits/specfun.h:45,
                 from /usr/include/c++/12/cmath:1935,
                 from stdc++.h:41:
/usr/include/c++/12/bits/stl_construct.h:94:5: note: candidate: ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...)’
   94 |     construct_at(_Tp* __location, _Args&&... __args)
      |     ^~~~~~~~~~~~
/usr/include/c++/12/bits/stl_construct.h:94:5: note:   template argument deduction/substitution failed:
/usr/include/c++/12/bits/stl_construct.h: In substitution of ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...) [with _Tp = D; _Args = {D&, long long int&}]’:
/usr/include/c++/12/bits/alloc_traits.h:518:21:   required from ‘static constexpr void std::allocator_traits<std::allocator<_CharT> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = D; _Args = {D&, long long int&}; _Tp = D; allocator_type = std::allocator<D>]’
/usr/include/c++/12/bits/vector.tcc:117:30:   required from ‘constexpr std::__cxx1998::vector<_Tp, _Alloc>::reference std::__cxx1998::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {D&, long long int&}; _Tp = D; _Alloc = std::allocator<D>; reference = D&]’
/usr/include/c++/12/debug/vector:519:23:   required from ‘std::__debug::vector<_Tp, _Allocator>::reference std::__debug::vector<_Tp, _Allocator>::emplace_back(_Args&& ...) [with _Args = {D&, long long int&}; _Tp = D; _Allocator = std::allocator<D>; reference = D&]’
/usr/include/c++/12/bits/stl_queue.h:756:18:   required from ‘void std::priority_queue<_Tp, _Sequence, _Compare>::emplace(_Args&& ...) [with _Args = {D&, long long int&}; _Tp = D; _Sequence = std::__debug::vector<D>; _Compare = std::greater<D>]’
test.cpp:252:20:   required from here
/usr/include/c++/12/bits/stl_construct.h:96:17: error: no matching function for call to ‘D::D(D&, long long int&)’
   96 |     -> decltype(::new((void*)0) _Tp(std::declval<_Args>()...))
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.cpp:222:5: note: candidate: ‘D::D(ll, ll)’
  222 |     D(ll d, ll n): d(d),n(n) {}
      |     ^
test.cpp:222:10: note:   no known conversion for argument 1 from ‘D’ to ‘ll’ {aka ‘long long int’}
  222 |     D(ll d, ll n): d(d),n(n) {}
      |       ~~~^
test.cpp:220:8: note: candidate: ‘constexpr D::D(const D&)’
  220 | struct D {
      |        ^
test.cpp:220:8: note:   candidate expects 1 argument, 2 provided
test.cpp:220:8: note: candidate: ‘constexpr D::D(D&&)’
test.cpp:220:8: note:   candidate expects 1 argument, 2 provided
